# portfolio

./: CMakeLists.txt  README.md
python/: daemon.py  init_db.py
src/: database.cpp  database.hh  gui.cpp  gui.hh  main.cpp  search.cpp  search.hh  stock.cpp  stock.hh
